--- a/CellarAvailable/manifest.json
+++ b/CellarAvailable/manifest.json
@@ -6,5 +6,5 @@
   "UniqueID": "Candidus42.CellarAvailable",
   "EntryDll": "CellarAvailable.dll",
   "MinimumApiVersion": "3.0.1",
-  "UpdateKeys": []
+  "UpdateKeys": [ "Nexus: 5104" ]
 }
