--- a/CellarAvailable/manifest.json
+++ b/CellarAvailable/manifest.json
@@ -1,10 +1,16 @@
 {
   "Name": "CellarAvailable",
   "Author": "Candidus42",
-  "Version": "1.3.0",
+  "Version": "1.3.1",
   "Description": "Cellar available for any farm house size",
   "UniqueID": "Candidus42.CellarAvailable",
   "EntryDll": "CellarAvailable.dll",
   "MinimumApiVersion": "3.0.1",
-  "UpdateKeys": [ "Nexus: 5104" ]
+  "UpdateKeys": [ "Nexus: 5104" ],
+  "Dependencies": [
+    {
+      "UniqueID": "aedenthorn.MultipleSpouses",
+      "IsRequired": false
+    }
+  ]
 }
